[package]
name = "inky_frame"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
fugit = "*"
embedded-hal = "1"
cortex-m = "*"
nb = "*"
tinybmp = "0.6.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
portable-atomic = {version = "1.7.0", features = ["unsafe-assume-single-core"]}
embedded-sdmmc = "0.8.0"
zune-qoi = {version = "0.4.10", default-features = false}
zune-core = {version = "0.4.12", default-features = false}

[profile.release]
panic = 'abort'
